@@ -5,30 +5,36 @@
     <parent>
         <groupId>uk.gov.companieshouse</groupId>
         <artifactId>companies-house-parent</artifactId>
-        <version>1.3.0</version>
+        <version>2.1.11</version>
         <relativePath/>
     </parent>
+
     <name>order-notification-sender</name>
     <description>Service responsible for sending customer order notification emails</description>
     <artifactId>order-notification-sender</artifactId>
     <version>latest</version>
+
     <properties>
-        <java.version>1.8</java.version>
-        <log4j.version>2.17.1</log4j.version>
-        <spring-boot-dependencies.version>2.6.3</spring-boot-dependencies.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <ch-kafka.version>1.4.2</ch-kafka.version>
-        <kafka-models.version>1.0.38</kafka-models.version>
-        <structured-logging.version>1.9.27</structured-logging.version>
-        <mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
-        <junit-jupiter.version>5.8.2</junit-jupiter.version>
-        <junit-jupiter-engine-version>5.8.2</junit-jupiter-engine-version>
-        <private-api-sdk-java.version>2.0.280</private-api-sdk-java.version>
-        <api-sdk-manager-java-library.version>1.0.4</api-sdk-manager-java-library.version>
-        <testcontainers.version>1.16.0</testcontainers.version>
-        <org.hamcrest.version>2.2</org.hamcrest.version>
+        <java.version>21</java.version>
+        <spring-boot-dependencies.version>3.4.0</spring-boot-dependencies.version>
+        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <ch-kafka.version>3.0.3</ch-kafka.version>
+        <kafka-models.version>3.0.8</kafka-models.version>
+        <structured-logging.version>3.0.20</structured-logging.version>
+        <mockito-junit-jupiter-version>5.14.2</mockito-junit-jupiter-version>
+        <mockito-inline.version>5.2.0</mockito-inline.version>
+        <junit-jupiter.version>5.11.4</junit-jupiter.version>
+        <junit-jupiter-engine-version>5.11.4</junit-jupiter-engine-version>
+        <private-api-sdk-java.version>4.0.259</private-api-sdk-java.version>
+        <api-sdk-manager-java-library.version>3.0.6</api-sdk-manager-java-library.version>
+        <testcontainers.version>1.20.4</testcontainers.version>
+        <org.hamcrest.version>3.0</org.hamcrest.version>
+        <mockserver-client-java>5.15.0</mockserver-client-java>
+        <jib-maven-plugin>3.4.4</jib-maven-plugin>
+        <avro.version>1.12.0</avro.version>
+        <mockito-core.version>5.14.2</mockito-core.version>
         <sonar.exclusions>
             **/config/ApplicationConfig.java,
             **/config/EmailConfiguration.java,
@@ -53,16 +59,14 @@
             **/ordersconsumer/RetryableErrorException.java,
             **/OrderNotificationApplication.java
         </sonar.exclusions>
+
+        <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
     </properties>
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-bom</artifactId>
-                <version>${log4j.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -72,26 +76,26 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>structured-logging</artifactId>
             <version>${structured-logging.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>*</artifactId>
+            </exclusion>
+          </exclusions>
             <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <!-- Exclude logback to prevent multiple SLF4J binding warning -->
-                    <groupId>ch.qos.logback</groupId>
-                    <artifactId>logback-classic</artifactId>
-                </exclusion>
-                <exclusion>
-                    <!--Exclude slf4j-simple to prevent loss of log formatting. See DCAC-294. -->
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-logging</artifactId>
+      </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -120,32 +124,55 @@
             <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>${mockito-junit-jupiter-version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter-engine-version}</version>
-            <scope>test</scope>
-        </dependency>
+
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>ch-kafka</artifactId>
             <version>${ch-kafka.version}</version>
         </dependency>
+
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>kafka-models</artifactId>
             <version>${kafka-models.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.avro</groupId>
+                    <artifactId>avro</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.jetty.http2</groupId>
+                    <artifactId>http2-common</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.jetty.http2</groupId>
+                    <artifactId>http2-server</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-webapp</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>${avro.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
@@ -159,6 +186,10 @@
                     <groupId>org.apache.kafka</groupId>
                     <artifactId>kafka-streams-test-utils</artifactId>
                 </exclusion>
+                    <exclusion>
+                        <groupId>org.pcollections</groupId>
+                        <artifactId>pcollections</artifactId>
+                    </exclusion>
             </exclusions>
         </dependency>
 
@@ -166,10 +197,11 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
-            <version>3.9.0</version>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -178,6 +210,7 @@
             <artifactId>private-api-sdk-java</artifactId>
             <version>${private-api-sdk-java.version}</version>
         </dependency>
+
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>api-sdk-manager-java-library</artifactId>
@@ -189,33 +222,44 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
             <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>mockserver</artifactId>
             <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-client-java</artifactId>
-            <version>5.5.4</version>
+            <version>${mockserver-client-java}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.ethlo.time</groupId>
+                    <artifactId>itu</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
+            <artifactId>hamcrest</artifactId>
             <version>${org.hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
@@ -226,7 +270,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.4.4</version>
+                <version>${spring-boot-dependencies.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -235,19 +279,30 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
             </plugin>
+
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
+
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>${jib-maven-plugin}</version>
+                <configuration>
+                    <from>
+                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
+                    </from>
+                    <to>
+                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/order-notification-sender:latest</image>
+                    </to>
+                </configuration>
             </plugin>
         </plugins>
     </build>
